setup/unused/4-Dashboard/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
    forecastle.stakater.com/expose: "true"
    forecastle.stakater.com/appName: "Kubernetes Dashboard"
    forecastle.stakater.com/group: "Dashboards"
    forecastle.stakater.com/icon: "https://raw.githubusercontent.com/stakater/ForecastleIcons/master/kubernetes.png"
spec:
  rules:
    - host: dashboard.cluster.local
      http:
        paths:
          - backend:
              serviceName: kubernetes-dashboard
              servicePort: 9090
